Fix planet animation and cropping on Chrome (finally)

--- a/src/components/Planet/index.module.css
+++ b/src/components/Planet/index.module.css
@@ -5,18 +5,13 @@
   pointer-events: none;
 }
 
-.background,
-.planet {
-  content: '';
+.background {
   position: absolute;
   top: 0;
   left: 0;
   width: 100%;
   height: 100%;
   border-radius: 50%;
-}
-
-.background {
   opacity: 0;
   background-color: #fcfcfc;
 }
